<resources>
    <string name="app_name">DocOnline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">1622284567783206</string>
    <string name="Settings">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="text_not_available">N/A</string>
    <string name="text_refresh_waiting_time">Refresh Slots</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_my_appointment">My Appointments</string>
    <string name="text_appointment_summery">Appointment Summary</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_subscription_plans">Select a Plan</string>
    <string name="text_confirmation">Confirmation</string>
    <string name="text_email_confirmation">Confirmation</string>
    <string name="text_medications">Medications</string>
    <string name="text_add_allergy">Add Allergy</string>
    <string name="text_update_allergy">Update Allergy</string>
    <string name="text_title">Title</string>
    <string name="text_bmi_results">BMI Result</string>
    <string name="text_vital_details">Vital Details</string>
    <string name="text_vitals">Vitals</string>
    <string name="text_terms_conditions">Terms &amp; Conditions</string>
    <string name="text_languages">Languages</string>
    <string name="text_preferred_language">Preferred Language</string>
    <string name="text_add_ons">Add Ons</string>
    <string name="text_chat_history">Chat History</string>
    <string name="text_billing_history">Billing History</string>
    <string name="text_billing_summary">Billing Summary</string>
    <string name="text_health_profile">Health Profile</string>
    <string name="text_family">Family Member</string>
    <string name="text_chat_with_doctor">Chat with Doctor</string>
    <string name="text_speed_test">Speed Test</string>
    <string-array name="smoke_status">
        <item><font size="13">Are you a Smoker ?</font></item>
        <item><font size="13">No, I do not Smoke</font></item>
        <item><font size="13">Yes</font></item>
    </string-array>
    <string name="hint_first_name_compulsary"><font size="13">First Name <sup>*</sup></font></string>
    <string name="hint_name_compulsary"><font size="13">Name <sup>*</sup></font></string>
    <string name="hint_medicine_compulsary"><font size="13">Medicine <sup>*</sup></font></string>
    <string name="hint_middle_name"><font size="13">Middle Name </font></string>
    <string name="hint_last_name_compulsary"><font size="13">Last Name <sup>*</sup></font></string>
    <string name="hint_family_member_one"><font size="13">FAMILY MEMBER 1</font></string>
    <string name="hint_family_member_two"><font size="13">FAMILY MEMBER 2</font></string>
    <string name="hint_date_of_birth"><font size="13">Date of Birth <sup>*</sup></font></string>
    <string name="hint_current_password"><font size="13">Current Password <sup>*</sup></font></string>
    <string name="hint_new_password"><font size="13">New Password <sup>*</sup></font></string>
    <string name="hint_password_confirmation"><font size="13">Confirm Password <sup>*</sup></font></string>
    <string name="hint_password_compulsary"><font size="13">Password <sup>*</sup></font></string>
    <string name="hint_password_confirm_compulsary"><font size="13">Confirm Password <sup>*</sup></font></string>
    <string-array name="gender_of_user">
        <item><font size="13">Choose Gender</font></item>
        <item><font size="13">Male</font></item>
        <item><font size="13">Female</font></item>
        <item><font size="13">Transgender</font></item>
    </string-array>
    <string name="hint_email_compulsary"><font size="13">Email <sup>*</sup></font></string>
    <string name="hint_contact_compulsary"><font size="13">Phone No <sup>*</sup></font></string>
    <string name="hint_dob_compulsary"><font size="13">Date of Birth <sup>*</sup></font></string>
    <string name="hint_date_form"><font size="13">From Date </font></string>
    <string name="hint_date_to"><font size="13">To Date </font></string>
    <string name="hint_intake_time"><font size="13">Intake Time </font></string>
    <string name="hint_gender_compulsary"><font size="13">Gender <sup>*</sup></font></string>
    <string name="hint_smoking"><font size="13">Smoking ? <sup>*</sup></font></string>
    <string name="hint_medical_history"><font size="13">Medical History <sup>*</sup></font></string>
    <string name="hint_address_compulsary"><font size="13">Address Line 1 <sup>*</sup></font></string>
    <string name="hint_address">Address Line 2</string>
    <string name="hint_city_compulsary"><font size="13">Town/City <sup>*</sup></font></string>
    <string name="hint_state_compulsary"><font size="13">State <sup>*</sup></font></string>
    <string name="hint_pin_code_compulsary"><font size="13">Pincode <sup>*</sup></font></string>
    <string name="hint_country_compulsary"><font size="13">Country <sup>*</sup></font></string>
    <string name="hint_phone_number"><font size="13">Phone No</font></string>
    <string name="hint_alternate_phone_number"><font size="13">Alternate Phone No</font></string>
    <string name="hint_enter_mobile_no">Enter Mobile No.</string>
    <string name="hint_mobile_no">Mobile No.</string>
    <string name="hint_enter_pincode">Pincode</string>
    <string name="text__book_consultation">Book a Consultation</string>
    <string name="network_quality">Network connection is unstable.</string>
    <string name="type_your_message">Your Message</string>
    <string name="add_caption">Add Caption</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="hint_address_line_1">Address Line 1</string>
    <string name="hint_address_line_2">Address Line 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_google_plus">Google</string>
    <string name="text_sign_in_using">Sign in using</string>
    <string name="text_or">or</string>
    <string name="text_enter_pincode">Enter\nPincode</string>
    <string name="text_edit_medicine">Edit\nMedicine</string>
    <string name="text_update_address">Update\nAddress</string>
    <string name="text_confirm_order">Confirm\nOrder</string>
    <string name="text_your_details">Your Details</string>
    <string name="text_book_consultation">Please feel free to share your  comments  or upload documents that can help you during the consultation.\n\nAs per strict legal policies, we ensure complete confidentiality  of
all information and data.</string>
    <string name="text_payment_halted">SERVICE HALTED</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_or_mobile">Email / Mobile No.</string>
    <string name="hint_email_or_mobile_or_mrn">Email / Mobile No. / MRN</string>
    <string name="hint_phone">Mobile No</string>
    <string name="hint_otp">OTP</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_coupon_code">Coupon Code</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_weight">Weight (Kg)</string>
    <string name="hint_height">Height (cm)</string>
    <string name="hint_caption">Add a Caption</string>
    <string name="hint_weight_phr">Weight</string>
    <string name="hint_height_phr">Height</string>
    <string name="hint_pulse_rate">Pulse Rate</string>
    <string name="hint_respiration_rate">Respiration Rate</string>
    <string name="hint_blood_pressure">Blood Pressure</string>
    <string name="hint_temperature">Temperature</string>
    <string name="hint_spo2">SPO2</string>
    <string name="hint_bmi">BMI</string>
    <string name="hint_head_circumference">Head Circumference (Kids)</string>
    <string name="hint_urine_output">Urine Output</string>
    <string name="hint_RBS">Random Blood Sugar</string>
    <string name="button_login">Login</string>
    <string name="button_skip">Skip</string>
    <string name="button_register">Register</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_save_history">Save History</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_submit">Submit</string>
    <string name="button_reset_link">Send Password Reset Link</string>
    <string name="button_continue">Continue</string>
    <string name="button_verify">Verify</string>
    <string name="button_forgot_password">Forgot Password ?</string>
    <string name="button_new_user">Sign Up</string>
    <string name="button_cancel_appointment">Cancel Appointment</string>
    <string name="button_add_to_calendar">Add to Calendar</string>
    <string name="button_existing_user">Sign In</string>
    <string name="button_resend_otp">RESEND OTP</string>
    <string name="button_enter_manually">ENTER MANUALLY</string>
    <string name="button_add_new">Add New</string>
    <string name="menu_save_photo">Download</string>
    <string name="action_save">Save</string>
    <string name="action_refresh">Refresh</string>
    <string name="text_loading">Loading ...</string>
    <string name="text_do_not_have_an_account">Do not have an account ?</string>
    <string name="text_remember_me">Remember Me</string>
    <string name="text_already_have_an_account">Already have an account ? </string>
    <string name="text_back_connectivity_error">Internet Connectivity Failure</string>
    <string name="text_back_button_press">Press Back Button Again to Exit</string>
    <string name="text__book_diagnostics">Diagnostics</string>
    <string name="text_diagnostics_user_addresses">Your Addresses</string>
    <string name="text_diagnostics_add_user_addresses">New Address</string>
    <string name="text_diagnostics_edit_user_addresses">Edit Address</string>
    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>
    <string name="Update">Update</string>
    <string name="Upgrade">Upgrade</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="NotNow">Not Now</string>
    <string name="Dismiss">Dismiss</string>
    <string name="NextTime">NextTime</string>
    <string name="Retry">Retry</string>
    <string name="Close">Close</string>
    <string name="Previous">Prev</string>
    <string name="Next">Next</string>
    <string name="End">End Test</string>
    <string name="Edit">Edit</string>
    <string name="Verify">Verify</string>
    <string name="Calculate">Calculate</string>
    <string name="StartNow">Start Now</string>
    <string name="SetNow">Set Now</string>
    <string name="NoThanks">No Thanks</string>
    <string name="EndNow">End Now</string>
    <string name="Subscribe">Subscribe</string>
    <string name="Choose">Choose</string>
    <string name="RetryPayment">Retry Payment</string>
    <string name="OrderNow">Order Now</string>
    <string name="CreateNow">Create Now</string>
    <string name="Upload">Upload</string>
    <string name="Search">Search</string>
    <string name="Info">Info</string>
    <string name="rationale_video_app">This app needs access to your camera and mic so you can perform video calls</string>
    <string name="action_clear">Clear all Notifications</string>
    <string name="action_mark_as_read">Mark all as Read</string>
    <string name="text_notification">Notifications</string>
</resources>