<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding_25"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/layout_social_authentication" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            style="@style/TextInputLayoutStyle" >

            <EditText
                android:id="@+id/editEmail"
                style="@style/DrawableEditTextStyle"
                android:hint="@string/hint_email_or_mobile_or_mrn"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_icon_user" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                style="@style/TextInputLayoutStyle" >

                <EditText
                    android:id="@+id/editPassword"
                    style="@style/DrawableEditTextStyle"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingEnd="0dp"
                    android:paddingStart="@dimen/padding_0"
                    android:drawableStart="@drawable/ic_lock" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnTogglePassword"
                style="@style/LinkButtonStyle"
                android:layout_width="50dp"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="@dimen/padding_10"
                android:gravity="end"
                android:onClick="onClick"
                android:paddingEnd="@dimen/padding_5"
                android:paddingStart="@dimen/padding_0"
                android:visibility="visible"
                android:textColor="@color/myTextSecondaryColor"
                android:text="Show" />

        </FrameLayout>

        <Button
            android:id="@+id/btnForgotPassword"
            style="@style/LinkButtonStyle"
            android:layout_width="match_parent"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="@dimen/padding_5"
            android:layout_marginStart="3dp"
            android:gravity="start"
            android:onClick="onClick"
            android:text="@string/button_forgot_password" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/button_next"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/myTextSecondaryColor"
            android:text="@string/text_do_not_have_an_account" />

        <Button
            android:id="@+id/btnNewUser"
            style="@style/LinkButtonStyle"
            android:layout_height="25dp"
            android:layout_width="70dp"
            android:onClick="onClick"
            android:text="@string/button_sign_up" />

    </LinearLayout>

</LinearLayout>