<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.doconline.doconline.profile.ProfileActivity" >

    <FrameLayout
        android:id="@+id/layout_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background = "@drawable/rectangle_curve_edges_white_style"
                android:orientation="vertical" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_address_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/editAddress_1"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_address_compulsary"
                        android:maxLines="1"
                        android:maxLength="150"
                        android:textSize="15sp"
                        android:inputType="text"
                        android:drawableStart="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_address_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/editAddress_2"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_address"
                        android:maxLines="1"
                        android:maxLength="150"
                        android:textSize="15sp"
                        android:inputType="text"
                        android:drawableStart="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/editCity"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_city_compulsary"
                        android:maxLines="1"
                        android:singleLine = "true"
                        android:maxLength="30"
                        android:textSize="15sp"
                        android:inputType="text"
                        android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:drawableStart="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/editState"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_state_compulsary"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:maxLength="30"
                        android:textSize="15sp"
                        android:inputType="text"
                        android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:drawableStart="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/place_holder"
                    android:textSize="12sp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="3dp"
                    android:text="@string/hint_country_compulsary" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_country"
                    android:backgroundTint="@color/colorAccent"
                    android:textSize="14sp"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/myTextPrimaryColor" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/editPincode"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_pin_code_compulsary"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:maxLength="6"
                        android:inputType="number"
                        android:drawableStart="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_alternate_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/editAlternatePhoneNumber"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_alternate_phone_number"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:textSize="15sp"
                        android:inputType="phone"
                        android:drawableStart="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <include layout="@layout/button_sample" />

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/layout_loading" />

    </FrameLayout>

</androidx.core.widget.NestedScrollView>