<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_25"
    android:orientation="vertical">

    <include layout="@layout/layout_social_authentication" />
    <include layout="@layout/layout_registration_step" />
    <include layout="@layout/layout_register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:visibility="gone"
        android:orientation="horizontal" >

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/check_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/myTextSecondaryColor"
            android:gravity="start"
            android:layout_weight="1"
            android:textSize="13sp"
            android:text="Have a Coupon Code ?" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_coupon"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="5dp" >

        <EditText
            android:id="@+id/editCouponCode"
            style="@style/DrawableEditTextStyle"
            android:hint="@string/hint_coupon_code"
            android:inputType="text"
            android:layout_marginTop="3dp"
            android:visibility="visible"
            android:drawableStart="@drawable/ic_coupan_icon" />

    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/button_next"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/myTextSecondaryColor"
            android:text="@string/text_already_have_an_account" />

        <Button
            android:id="@+id/btnExistingUser"
            style="@style/LinkButtonStyle"
            android:layout_height="25dp"
            android:layout_width="70dp"
            android:onClick="onClick"
            android:text="@string/button_login" />

    </LinearLayout>

</LinearLayout>